<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="40dp"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hello"
        android:contentDescription="@string/cheezery_logo"

        android:layout_gravity="center_horizontal"/>

    <!-- Campo para Nombre -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="16dp"/>

    <!-- Campo para Apellido -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <!-- Campo para Correo Electrónico -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <!-- Campo para Contraseña -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <!-- Checkbox de términos y condiciones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/checkbox_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="14sp"
            android:textColor="#626262"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@drawable/second_gradient"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>
</LinearLayout>
