<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/thecheezery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/welcome_to_the_cheezery"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textStyle="italic"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:paddingTop="8dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:padding="12dp"
        android:textStyle="bold"
        android:background="@drawable/first_gradient"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>
</LinearLayout>
